new header__nav

--- a/components/header.html
+++ b/components/header.html
@@ -27,15 +27,23 @@
 
     <div class="overlay-content">
         <div class="header__nav">
-            <div id="headerSearchBar" class="header__search-bar">
+            <div class="header__nav-Recettes">
+                <a href="/recettes"><h1>Recettes</h1></a>
+                <div id="headerSearchBar" class="header__search-bar">
+                </div>
+                <div class="Menu_categorie">
+                    <secondary-button text="Apéritif" href="/recettes?categorie=Ap%C3%A9ritif"></secondary-button>
+                    <secondary-button text="Entrée" href="/recettes?categorie=Entr%C3%A9e"></secondary-button>
+                    <secondary-button text="Tapas" href="/recettes?categorie=Tapas"></secondary-button>
+                    <secondary-button text="Plat" href="/recettes?categorie=Plat"></secondary-button>
+                    <secondary-button text="Dessert" href="/recettes?categorie=Dessert"></secondary-button>
+                    <secondary-button text="Boisson" href="/recettes?categorie=Boisson"></secondary-button>
+                </div>
             </div>
-            <div class="Menu_categorie">
-                <secondary-button text="Apéritif" href="/recettes?categorie=Ap%C3%A9ritif"></secondary-button>
-                <secondary-button text="Entrée" href="/recettes?categorie=Entr%C3%A9e"></secondary-button>
-                <secondary-button text="Tapas" href="/recettes?categorie=Tapas"></secondary-button>
-                <secondary-button text="Plat" href="/recettes?categorie=Plat"></secondary-button>
-                <secondary-button text="Dessert" href="/recettes?categorie=Dessert"></secondary-button>
-                <secondary-button text="Boisson" href="/recettes?categorie=Boisson"></secondary-button>
+
+
+            <div class="header__nav-en_cuisine">
+                <h1>En cuisine</h1>
             </div>
         </div>
     </div>
